# bmad-todo-app

./: .dockerignore  .gitignore  AI-DEVELOPMENT-LOG.md  DELIVERABLES.md  Makefile  README.md  docker-compose.yml  package.json  playwright.config.ts
.playwright-mcp/: page-2026-04-02T23-28-13-224Z.yml  page-2026-04-02T23-28-39-078Z.yml  page-2026-04-02T23-28-55-462Z.yml  page-2026-04-02T23-29-17-880Z.yml  page-2026-04-02T23-29-35-515Z.yml  page-2026-04-02T23-30-04-924Z.yml  page-2026-04-02T23-30-25-813Z.yml  page-2026-04-02T23-30-48-447Z.yml
_bmad-output/: report.html  report.json
api/: .env.example  Dockerfile  README.md  alembic.ini  bmad_todo.db  pyproject.toml
api/app/: __init__.py  main.py
api/app/api/: router.py
api/app/api/routes/: test_support.py  todos.py
api/app/core/: __init__.py  config.py  errors.py  logging.py
api/app/db/: __init__.py  session.py
api/app/db/models/: __init__.py  todo.py
api/app/repositories/: todo_repository.py
api/app/schemas/: common.py  error.py  todo.py
api/app/services/: todo_service.py
api/bmad_todo_app_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
api/migrations/: env.py
api/migrations/versions/: 0001_create_todos_table.py  0002_add_created_at_index.py
api/tests/: conftest.py  test_health.py  test_todos_api.py
api/tests/unit/: test_config.py  test_logging.py  test_schemas.py  test_session.py  test_test_support.py  test_todo_repository.py  test_todo_service.py
docs/: Product Requirement Document (PRD) for the Todo App.md  project-brief.md
scripts/: dev.sh
web/: .env.example  Dockerfile  (+6 more)
(+75 files in other folders)
