[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bmad-todo-app-api"
version = "0.1.0"
description = "Backend scaffold for bmad-todo-app"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.128.0,<1.0.0",
  "sqlalchemy>=2.0.48,<3.0.0",
]

[project.optional-dependencies]
test = [
  "httpx>=0.28.0,<1.0.0",
  "pytest>=8.4.0,<9.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
